# bubbola-auto-extract

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: full-cycle.yml  publish-evaluator.yml  run-release-evaluation.yml
bubbola_pipeline/: full_cycle.py  generator.py
crates/evaluator/: build.rs
crates/evaluator/src/: error.rs  lib.rs  main.rs  metrics.rs  template.rs
crates/evaluator/tests/: cli.rs
docker/: bake_eval_binary.Dockerfile
eval_binary/: __init__.py  cli.py  evaluator.py
extractor/: README.md  pyproject.toml  requirements.txt
extractor/src/: template_loader.py
extractor/src/bubbola_pipeline/: __init__.py  extractor.py  full_cycle.py  generator.py  models.py
python/: template_loader.py
resources/fixtures/: dummy_ground_truth.json
scripts/: bake_eval_binary.py
src/: embedded.rs  evaluator.rs  lib.rs  main.rs  template.rs
tests/: cli.rs  test_eval_binary.py
tests/data/: dummy_ground_truth.json  dummy_predictions.json
tools/docker/: bake_eval_binary.Dockerfile
