[package]
name = "pdf_eval"
version = "1.0.0"
edition = "2021"
description = "Self-contained PDF evaluator with embedded ground truth"
authors = ["AutoBuild"]
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
once_cell = "1.19"

[build-dependencies]
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rustc_version = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
