[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bubbola-auto-extract"
version = "0.1.0"
description = "Utilities for baking an evaluation binary for PDF extraction tasks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["eval_binary*"]
